fix overflow behaviour of icon

--- a/app/assets/stylesheets/components/_input.scss
+++ b/app/assets/stylesheets/components/_input.scss
@@ -11,13 +11,11 @@
 
 .flex-box-input-and-delete {
   display: flex;
-
 }
 
 .search-form {
   display: flex;
   align-items: center;
-
 }
 
 .search-bar {
@@ -34,8 +32,8 @@
 .filter-wrapper {
   display: flex;
   margin-top: 0.8rem;
-  min-width: 0;
-  overflow: scroll;
+  margin-right: 4px;
+  align-items: center;
 }
 
 .fabric-types-form {
@@ -44,20 +42,32 @@
 }
 
 .fabric-types-form > label {
-  width: unset;
+  margin: 4px;
   font-size: 0.8rem;
+  width: 64px;
+}
+
+.fabric-types-wrapper {
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .garment-category-form {
   flex-wrap: nowrap;
   display: flex;
-  overflow: auto;
+  overflow: scroll;
   align-items: center;
   flex: 1 0 auto;
   justify-content: space-between;
 }
- .garment-category-filter-label {
-  min-width: 0;
-  min-height: 0;
+
+.garment-category-wrapper {
+  display: inline-block;
   overflow: scroll;
- }
+  width: 100%;
+  vertical-align: middle;
+}
+
+#label-garment-category-all {
+  margin: 0;
+}
